Merge pull request #3 Status重构